gnome-disk-utility (2.28.0-1) UNRELEASED; urgency=low

  [ Martin Pitt ]
  * New upstream version:
    - Port to PolicyKit-1 (which essentially means to drop all the PK code).
    - Follow GNOME release cycle now.
    - Lots of bug fixes and translation updates.
    - Land new ATA SMART user interface (requires DK-disks 007).
  * debian/control:
    - Drop old libpolkit*-dev build and binary dependencies.
    - Bump devicekit-disks build/binary dependency to >= 007.
    - Bump libgtk2.0-dev and libatasmart-dev build dependencies as required by
      upstream.
    - Drop libsexy-dev build dependency, not necessary any more.
  * debian/control: Add alternative build dependency "rarian-compat", the
    successor of scrollkeeper.
  * debian/libgdu0.symbols, debian/libgdu-gtk0.symbols: Update for new
    release.
  * debian/control: Bump Standards-Version to 3.8.3 (no changes necessary).

 -- Michael Biebl <biebl@debian.org>  Mon, 22 Jun 2009 14:47:08 +0200

gnome-disk-utility (0.3-2) experimental; urgency=low

  * debian/copyright
    - Add Name, Maintainer and Source field as recommended by DEP-5.
  * debian/control
    - Add missing Build-Depends on gnome-doc-utils, scrollkeeper and
      libnautilus-extension-dev (>= 2.24). (Closes: #529589)

 -- Michael Biebl <biebl@debian.org>  Wed, 20 May 2009 18:27:27 +0200

gnome-disk-utility (0.3-1) experimental; urgency=low

  * Initial release. (Closes: #521365)

 -- Michael Biebl <biebl@debian.org>  Mon, 18 May 2009 10:49:51 +0200