@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 7),
  cdbs,
  autotools-dev,
  pkg-config,
+ lsb-release,
  xsltproc,
  gtk-doc-tools,
  gnome-doc-utils,
