@@ -7,3 +7,10 @@ include /usr/share/cdbs/1/rules/utils.mk
 DEB_CONFIGURE_EXTRA_FLAGS := --disable-scrollkeeper
 
 DEB_DH_MAKESHLIBS_ARGS_ALL := -X/usr/lib/nautilus/
+
+binary-install/gnome-disk-utility::
+	# when building for Ubuntu, move menu entry from Apps → System Tools
+	# (which Ubuntu tries to avoid) to System → Administration.
+	if [ "`lsb_release -is 2>/dev/null`" = "Ubuntu" ]; then \
+	    sed -i '/^Categories=/ s/$$/Settings;HardwareSettings;/' debian/gnome-disk-utility/usr/share/applications/*.desktop; \
+	fi
