@@ -17,6 +17,9 @@ gnome-disk-utility (2.28.0-1) UNRELEASED; urgency=low
   * debian/libgdu0.symbols, debian/libgdu-gtk0.symbols: Update for new
     release.
   * debian/control: Bump Standards-Version to 3.8.3 (no changes necessary).
+  * debian/rules: When building for Ubuntu, update palimpsest .desktop's
+    Category field to appear in System → Administration instead of Apps →
+    System Tools.
 
  -- Michael Biebl <biebl@debian.org>  Mon, 22 Jun 2009 14:47:08 +0200
 
